--- a/1904.04178/APR_TrappedIonQC_v4.tex
+++ b/1904.04178/APR_TrappedIonQC_v4.tex
@@ -2,7 +2,7 @@
 %   Version 4.1r of REVTeX, August 2010
 
 \documentclass[%
-reprint,
+12pt,
 %superscriptaddress,
 %groupedaddress,
 %unsortedaddress,
@@ -21,7 +21,7 @@ reprint,
 %prstab,
 %prstper,
 %floatfix,
-]{revtex4-1}
+]{revtex4-2}
 
 \usepackage{graphicx}% Include figure files
 \usepackage{dcolumn}% Align table columns on decimal point
@@ -38,6 +38,48 @@ reprint,
 %%total={6.5in,8.75in}, top=1.2in, left=0.9in, includefoot,
 %%height=10in,a5paper,hmargin={3cm,0.8in},
 %]{geometry}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \newcommand{\zero}{|0 \rangle}
 \newcommand{\one}{|1 \rangle}
@@ -102,8 +144,8 @@ In 2000, DiVincenzo outlined five key criteria for a quantum information process
 
 For trapped ions, internal electronic states of the ion are used for the qubit states $\zero$ and $\one$. Trapped-ion qubits can generally be considered as one of four types: \emph{hyperfine} qubits, where the qubit states are hyperfine states of the ion separated by an energy splitting of order gigahertz; \emph{Zeeman} qubits, where the qubit states are magnetic sublevels split by an applied field and typically have tens of megahertz frequencies; \emph{fine structure} qubits, where the qubit states reside in the fine structure levels and are separated by typically tens of terahertz; and \emph{optical} qubits, where the qubit states are separated by an optical transition (typically hundreds of terahertz). Each type of qubit comes with its own particular benefits and drawbacks, as will be described later (see Section \ref{subInternal}).
 
-\begin{figure*}[t b h]
-\includegraphics[width=2.0\columnwidth]{StatePrepv3.pdf}
+\begin{figure*}[tp]
+\includegraphics[width=0.9\columnwidth]{StatePrepv3.pdf}
 \caption{Simplified depiction of state preparation, control, and detection in trapped-ion optical qubits. (a) The ion can be quickly optically pumped to the $\one$ state by coupling the long-lived $\zero$ state to an auxiliary state $|e\rangle_{\mathrm{SP}}$ that rapidly decays. (b) Qubit control is achieved by directly coupling the $\zero$ and $\one$ states using a narrow electric quadrupole transition. (c) Readout is achieved by shining light resonant on the broad transition $\one \rightarrow | e \rangle_{\mathrm{R}}$, and collecting the resulting scattered fluorescence photons. There is no similar transition $\zero \rightarrow | e \rangle_{\mathrm{R}}$ so the $\zero$ state appears dark.}
 \label{fig:stateprep}
 \end{figure*}
@@ -183,8 +225,8 @@ Penning traps provide the ability to maintain large, two-dimensional ion crystal
 
 RF trapping relies on time variation of a potential that, at any instant in time, is anti-confining in at least one dimension.  Confinement using this time-variation is enabled due to the inertia of a massive charged particle.  It is thus clear that the stability of an ion in such a ponderomotive trapping potential created in this manner would depend on the parameters of both the RF potential, as well as of the ion itself.  In fact, the motion of an ion in an RF Paul trap satisfies the Mathieu equation~\cite{Wineland1998} and depends in detail on these parameters, i.e. the ion's charge-to-mass ratio, the RF frequency, the RF amplitude, and the curvature of the potential.  Solutions to the Mathieu equation result in so-called ``secular'' harmonic bounded motion at a frequency typically  somewhat less than half the RF drive frequency.  Upon the secular motion is superimposed a higher frequency motion, at the RF drive frequency, known as ``micromotion,'' and its amplitude is in general time-dependent.  The stability of RF Paul traps used for containment of singly-ionized atoms requires the voltage amplitude and frequency of the applied RF to fall in a certain range.  Traps being explored for QC applications have ion-electrode distances in the range of 30~$\mu$m to 1~mm, leading to RF voltage amplitudes of 10-1000~V at 10-100~MHz, depending on the exact trap size and atomic species.
 
-\begin{figure*}[t b h]
-\includegraphics[width=2.0\columnwidth]{traps_from_brownnutt.PNG}
+\begin{figure*}[tp]
+\includegraphics[width=0.9\columnwidth]{traps_from_brownnutt.PNG}
 \caption{(Reproduced from~\cite{brownnutt_2015}.) RF Paul trap geometries. (a) The basic concept of RF trapping, where quadrupolar fields oscillating at an RF frequency are produced using a set of (parabolic) electrodes.  (b) The simplest cylindrically symmetric version of the basic RF trap.  This is of the ``ring and endcap'' point-trap geometry.  (c) The simplest translationally symmetric version of the basic RF trap.  This will form a quadrupole mass filter and can be used to make a linear trap.  (d,e) Topologically equivalent deformations of the geometry shown in (b).  (f) Topologically equivalent deformations of the geometry shown in (c) with additional endcap electrodes added to form a four-rod, linear trap.  (g) The four-rod trap in (f) may be deformed such that all electrodes reside in a single plane, forming a linear ``surface-electrode trap.''  (h) A subset of the electrodes in a linear trap [a surface-electrode trap is depicted here, but segmentation may be applied to other linear trap geometries, such as that shown in (f)] may be segmented to allow trapping in multiple zones, along the axial direction.}
 \label{fig:rf_trap_types}
 \end{figure*}
@@ -220,8 +262,8 @@ Trap performance can also be degraded following the deposition of the neutral pr
 
 The multitude of states of the valence electrons in the mostly Group-II or Group-II-like atomic ions used for QC experiments allows for many choices of qubit.  Pairs of states employed for qubit levels can come from any combination of long-lived levels in the ground or metastable manifolds of ions with or without nuclear spin or low-lying $D$~levels.  Non-zero nuclear spin, as is present in odd-mass isotopes of ions of interest (and in even-mass isotopes with net nuclear spin), generates hyperfine levels due to interaction of the nuclear spin with the valence electron.  The ground-state hyperfine levels are some of the most long-lived states available, with spontaneous-emission-limited lifetimes approaching the age of the universe.  Low-lying $D$~levels, which are present in several ions of interest, form metastable manifolds with lifetimes in the range of seconds.  Low-lying $F$~levels, as exist in, e.g., Yb$^{+}$, can also be used; these have even longer lifetimes than the $D$ states, but their extremely narrow linewidth means that significant optical power is required to drive transitions to these levels (for an equivalent gate time).  Furthermore, the laser linewidth needs to be especially narrow in order to take advantage of the extended coherence that can result from the longer lifetime. The addition of a non-zero magnetic field splits the Zeeman sublevels in the ground and metastable manifolds, creating many well-defined and addressable levels.  Figure~\ref{fig:qubit_types} shows  a basic level structure diagram of species of interest for QC; this figure also depicts level choices for the various types of qubit described below.
 
-\begin{figure*}[t b h]
-\includegraphics[width=2.0\columnwidth]{QubitsLevelStructure_2.png}
+\begin{figure*}[tp]
+\includegraphics[width=0.9\columnwidth]{QubitsLevelStructure_2.png}
 \caption{Level structure and pairs of levels utilized for qubits in monovalent ions (energy splittings not to scale).  (a) Basic electronic structure of ions used in QC.  All have $S$ and $P$ levels.  If present, low-lying $D$ (as in Ca$^{+}$, etc.) and $F$ (as in Yb$^{+}$) levels require quadrupole or octupole transitions, respectively, from the ground state.  (b) Structure of zero-nuclear-spin ($I=0$, typically even isotopes) ions in a small magnetic field.  Example Zeeman, optical, and fine-structure qubit level choices are depicted.  (c) Structure of non-zero-nuclear-spin ($I\neq0$, odd isotopes) ions in a small magnetic field.  An $I=1/2$ level structure is depicted and $D$ and $F$ levels are omitted for clarity.  Hyperfine levels are labeled in the ground state only.  A ``clock''-type hyperfine qubit is depicted, but all four qubit types can be implemented in $I\neq0$ ions (if $D$ or $F$ levels are present).  Typical (order of magnitude) level splittings for the various qubit types are:  Zeeman qubits, 1--10~MHz; Optical qubits, 100--1000~THz; fine-structure qubits; 1--10~THz; hyperfine qubits, 1--10~GHz.  Levels are labeled using spectroscopic notation with the principle quantum number omitted, i.e. as $^{2s+1}L_{j}$, where $s$ is the total spin quantum number ($1/2$ in the case of a single valence electron), $L$ refers to the orbital momentum quantum number written as $S, P, D, F, \ldots$, and $j$ is the total angular momentum quantum number.}
 \label{fig:qubit_types}
 \end{figure*}
@@ -402,7 +444,7 @@ Some effort has been made to increase the speed of single-qubit ion gates, albei
 Multi-qubit gates entangle the internal and motional states of trapped ions by means of the Coulomb interaction \cite{James2QGatesReview2000}.  The first proposal of an entangling gate between two ions was made by Cirac and Zoller \cite{CiracZollerGate}, and launched the field of ion-trap QC. While many different gate schemes have been proposed since then, with various advantages over the Cirac-Zoller (CZ) gate, all multi-qubit trapped-ion gates proposed so far share the essential feature introduced by Cirac and Zoller: using the shared motional modes of ions as a bus to transfer quantum information between them. The CZ gate is a controlled phase gate, but a single-qubit rotation can transform it into the CNOT gate.
 
 \begin{figure}
-\includegraphics[width=\columnwidth]{CZ_lettered.pdf}
+\includegraphics[scale=0.7]{CZ_lettered.pdf}
 \caption{Schematic representation of the action of the CZ gate.  a) A red sideband $\pi$-pulse on the control ion transfers amplitude from the $|1\rangle_{c}$  state to the ground electronic state $|0\rangle_{c}$ in the first excited collective motional state $|n=1\rangle$. b) A red sideband $2\pi$-pulse on the target ion through an auxiliary excited state $|e\rangle_{t}|n=0\rangle$ proceeds, conditioned on population of the $|n=1\rangle$ motional state in the first step. c) A final red sideband $\pi$-pulse on the control ion returns it to its initial state. Dashed lines denote forbidden transitions to nonexistent motional states.}
 \label{CZFigure}
 \end{figure}
@@ -424,7 +466,7 @@ A third type of two-qubit gate for ions is Leibfried's geometric-phase gate~\cit
 
 \begin{figure}
     \centering
-    \includegraphics[width=\columnwidth]{GeometricPhase_final.pdf}
+    \includegraphics[scale=0.7]{GeometricPhase_final.pdf}
     \caption{Phase space trajectories of two-ion states during a  geometric phase  gate. Spin-dependent forces drive particular ion states ($|10\rangle$ and  $|01\rangle$) along closed paths in phase space, imparting a geometric phase $\Phi$ set by the enclosed area. The $|00\rangle$ and $|11\rangle$ states do not couple to the control field and therefore accrue no geometric phase. Figure adapted from Ref. \cite{LeibfriedDidiGate2003}. The M\o{}lmer-S\o{}rensen gate proceeds in a similar fashion but applies phases to two-ion states in a rotated spin basis.}
     \label{fig:phasegates}
 \end{figure}
@@ -477,7 +519,7 @@ State-dependent fluorescence measurement can be applied in the case of hyperfine
 
 \begin{figure}
     \centering
-    \includegraphics[width=\columnwidth]{Verticalv3.pdf}
+    \includegraphics[scale=0.7]{Verticalv3.pdf}
     \caption{Trapped-Ion State Readout. (a) Schematic drawing of fluorescence detection of a trapped ion. The ion scatters many photons from a resonant laser beam that are collected by a large-NA lens with efficiency $\eta_{c}$. The collected photons are imaged on a detector, which registers photon counts, shown here as clicks, with its own efficiency $\eta_{d}$. (b) Simulated photon collection histograms for state detection of a trapped ion. The bright (dark) state photon counts are taken from a Poissonian distribution with mean $\lambda_{b}=20$ ($\lambda_{d}=1)$. The dotted vertical line shows a threshold value of 7 photons, demonstrating high accuracy determination of the ion state.}
     \label{fig:detection}
 \end{figure}
@@ -549,8 +591,8 @@ Extending the architecture to two-dimensional (2D) arrays has been proposed as a
 
 Beyond distribution of quantum information, 2D arrays offer an additional architectural benefit. As discussed in Ref.~\cite{KielpinskiQCArchitecture2002}, different regions in the array can be used for different functions.  For example, there can be ``memory" regions that are spatially separated from potential sources of decoherence, an ``interaction" region where control fields are present and gates are performed, a ``measurement" region where the ion qubit states are measured, and a ``loading" region where neutral atoms are initially ionized and trapped in the array \cite{LekitscheMicrowaveBlueprint2017}.  Spatially separating the functionality of different regions allows one to tailor and optimize the trap design for that particular function. The name for this architecture, coined in Ref.~\cite{KielpinskiQCArchitecture2002} and used widely in the field, is the Quantum Charge-Coupled Device (QCCD).
 
-\begin{figure*}[t b h]
-\includegraphics[width=2.0\columnwidth]{Architecture_LinearArray_v7.pdf}
+\begin{figure*}[tp]
+\includegraphics[width=0.9\columnwidth]{Architecture_LinearArray_v7.pdf}
 \caption{Architectures for practical trapped-ion systems.  Circles represent ion qubits, and entanglement between qubits is indicated by like fill color.  Black fill indicates no entanglement.  Curved lines with arrows indicate an entangling gate has occurred.  (a) Linear Array: (i) A 1D chain of ions can be straightforward to produce, but performing entangling gates in such chains with high fidelity may prove more difficult as the chain size grows. (ii) One strategy is to split the chain into modules (blue boxes) to perform high-fidelity entangling gates. (iii) To entangle ions between modules, the modules can be reconfigured such that high-fidelity entangling gates can be performed between ions of formerly-different modules; (iv) the modules can then be subsequently returned to their original state.  (b) 2D Array and the QCCD: (i) Modules each consisting of a few ion qubits are arranged in a 2D array.  Ions, which may have been previously entangled, reside in so-called ``memory" zones (indicated by the dotted box), which can be optimized to allow for long qubit coherence time. (ii) To entangle qubits between modules, the ions are shuttled (indicated by dashed lines with arrows) through X-junctions to an ``interaction region" (indicated by a dotted box) where entangling gates are performed. Ions can then be shuttled back to return the modules to their original state, and the process can then be repeated to entangle ions in other modules.  (c) Photonic Interconnects: (i) Ions in each module start off un-entangled with one another.  A dedicated communication ion in each module is then excited by a laser (blue arrows) which results in the emission of photons (purple) that are entangled with the resulting internal ion state.  The photons are collected with optics (light gray) and interfered on a 50/50 beamsplitter (BS).  (ii) Simultaneous detection of photons by single-photon detectors (black hemispheres), positioned at the output ports of the BS, heralds entanglement between the communication ions. (iii) Intra-module entangling gates can then be performed to increase the number of entangled qubits across modules.  We note that, while the photonic interconnect architecture is shown here for linear ion arrays, it can also be readily applied to a 2D array.}
 \label{fig:architectures}
 \end{figure*}
@@ -643,7 +685,7 @@ In order to build practical trapped-ion-based quantum computers, development of 
     \subsection{Chip-Scale Ion Traps}
 The surface electrode trap technology will likely be required as the need arises for an increased number of ion trap electrodes and an increased electrode-configuration complexity (see Secs.~\ref{MicroTraps} and \ref{2DArrays}).  A typical surface-electrode ion trap consists of a substrate, or chip, composed of material such as sapphire, quartz, or silicon, with metal electrodes patterned on its surface (above which the ion is trapped).  These electrodes are typically formed via a few-micron-thick metal deposition, followed by optical lithography and chemical etch to define the electrode pattern; electroplating techniques are often used, as well.  Such fabrication methods offer great flexibility in design, allowing for arbitrary electrode shapes and patterns, as well as for multiple metal layers (separated by insulating layers) that are useful for wiring and routing of electrical signals to the electrodes.  In addition, these methods deliver extremely tight dimensional tolerances, providing sub-micron-feature resolution.  Since the positions of the ions are set by these dimensions, the ion location above a chip-scale trap is thus very precisely determined.  As a general rule of thumb, the scale of the ion-to-electrode-surface distance is set by the lateral dimensions of the electrodes, and so shrinking the lateral scale necessitates moving the ion closer to the trap surface.  Because of current issues associated with anomalous motional heating (see Sec.~\ref{AnomHeating}), it has not thus far been desirable to make traps with ion-to-surface distances closer than a few tens of microns.  As a result, the lateral scale of a typical zone in a surface electrode trap, which is comprised of $\sim$ 5-10 electrodes, is a few hundred microns.  However, as the trap fabrication resolution is far from this limit, the technology is amenable to significant reduction in size if ion heating can be reduced or tolerated.  A photograph of a typical surface electrode trap chip is shown in Fig.~\ref{fig:chiptrap}.
 
-\begin{figure}
+\begin{figure}[tp]
     \centering
     %\includegraphics[width=0.8\columnwidth]{AlChipTrap_v3.pdf}
     \includegraphics[width=0.8\columnwidth]{Al_trap_v4.png}
@@ -663,8 +705,8 @@ The tight focusing of laser beams serves two important functions: first, it redu
 
 The use of integrated photonics has been suggested as a means to address the challenges of precisely delivering a large number of tightly-focused laser beams to a 2D ion array with low crosstalk \cite{KielpinskiIntPhotonArch2016, MehtaIntegrated2016,MehtaThesis2017}, and many decades of work in the area of silicon integrated photonics~\cite{ThomsonSiPhotonicsReview2016} can potentially be leveraged to this end.  Different integrated photonic components can be considered, but a crucial one is the optical waveguide, which is essentially an optical fiber fabricated into the chip substrate.  As shown in Fig.~\ref{fig:intphot}, waveguides consist of a core material, patterned on a chip, that is surrounded by other, cladding materials that have a lower optical index than the core.  As in fiber-optics, the optical mode will be confined to the higher index core, such that light can be routed on chip following the patterned core path.  Such patterning is typically done with the same micro/nano-fabrication techniques used to fabricate surface electrode traps.   The flexibility this offers is profound.  The width and thickness of the waveguides can be chosen to ensure single spatial mode propagation and polarization maintaining capabilities, and by varying the waveguide cross-sectional geometry, the optical modes can be shaped. And not only can light be routed and shaped in complex fashion around the chip, but waveguides also allow for splitting of the light into multiple paths (i.e., on-chip beam splitters) to enable fan-out.
 
-\begin{figure*}[t b h]
-\includegraphics[width=2.0\columnwidth]{IntegratedPhotonics_v2.pdf}
+\begin{figure*}[tp]
+\includegraphics[width=0.9\columnwidth]{IntegratedPhotonics_v2.pdf}
 \caption{Integrated photonics for light delivery.  (a) Cartoon of integrated photonic waveguides and grating couplers delivering light to two locations above a surface electrode ion trap.  The waveguides and gratings consist of a patterned high-optical-index core (blue-grey) surrounded by a lower-index cladding (white).  Square windows are opened in the trap metal (light grey) to allow the light (red) emitted from the grating coupler to reach the ion (blue circle).  The inset shows a zoomed in view of a grating coupler. (b) Schematic cross section of an ion trap with integrated photonics.  Layers, including the chip substrate (dark grey) are shown, with thicknesses not to scale.}
 \label{fig:intphot}
 \end{figure*}
@@ -802,9 +844,9 @@ P_{\textrm{Opt,1Q}}=\frac{1}{10} \hbar\, c\, w_{0}^{2}\, \frac{k_{D}^{3}}{\gamma
 
 \noindent In this case, we have maximized the Rabi frequency with respect to the laser beam polarization and direction with respect to the quantizing magnetic field for a $\Delta m_{j} = 2$ transition, where $m_{j}$ denotes the Zeeman sublevel.  As can be seen, equations~\ref{p_raman} and~\ref{p_optical} are very similar.  In both cases, longer-wavelength transitions and smaller beams are strongly preferred, both considerations which suggest the use of integrated photonic technologies for scalable designs.  See Fig.~\ref{fig:gate_comparison}a for a comparison of single-qubit Raman and optical gates for several species of interest; here we plot the power required as a function of $\pi$-pulse gate time for a spontaneous scattering error of $10^{-4}$ or less. The main trends among species are due to the differences in the optical gate wavelengths and $D$~state decay times.  The main difference in the two expressions for required power when considering Raman and optical excitation is due to the Rabi frequency's dependence on the electric field $E$ in a Raman transition in the presence of fine structure [$\Omega \propto E_1 E_2\ \omega_{\textrm{F}} / (\Delta_R(\Delta_R-\omega_{\textrm{F}}))$ for Raman detuning $\Delta_R$ and fine-structure splitting $\omega_{F}$] versus a direct optical transition ($\Omega \propto E$).
 
-\begin{figure}[t b]
-\includegraphics[width=1.0\columnwidth]{gate_comp_1qg_v5.pdf}\\
-\includegraphics[width=1.0\columnwidth]{gate_comp_2qg_v5.pdf}
+\begin{figure}[tp]
+\includegraphics[scale=.5]{gate_comp_1qg_v5.pdf}\\
+\includegraphics[scale=.5]{gate_comp_2qg_v5.pdf}
 \caption{Optical power required to drive optical and Raman gates as a function of gate time for several ion species of interest.  The power is the total assuming an equal split between two Raman beams, the optical gate is performed between the ground state and the $D_{5/2}$ state, and in both the optical and Raman case, a constant 20~$\mu$m beam waist is assumed.  (a) Single qubit gates with an error of $10^{-4}$ error or less. (b) Two-qubit gates with an error of $10^{-3}$ or less.  Lower error from spontaneous emission in the optical case requires going to a shorter gate time (by increasing the power), whereas scattering error can be reduced in the Raman case for the same gate time by increasing both detuning and power.}
 \label{fig:gate_comparison}
 \end{figure}
