--- a/1904.04178/APR_TrappedIonQC_v4.tex
+++ b/1904.04178/APR_TrappedIonQC_v4.tex
@@ -89,7 +89,7 @@ bookmarksopenlevel=10
 %\preprint{APS/123-QED}
 
 
-
+\date{8 Apr 2019}
 \title{Trapped-Ion Quantum Computing: Progress and Challenges}
 \author{Colin D. Bruzewicz}
 \email{colin.bruzewicz@ll.mit.edu}
@@ -104,9 +104,6 @@ bookmarksopenlevel=10
 \email{jsage@ll.mit.edu}
 \affiliation{Lincoln Laboratory, Massachusetts Institute of Technology, Lexington, MA, 02420}
 
-
-
-\date{\today}
 
 \begin{abstract}
 Trapped ions are among the most promising systems for practical quantum computing (QC).  The basic requirements for universal QC have all been demonstrated with ions and quantum algorithms using few-ion-qubit systems have been implemented.  We review the state of the field, covering the basics of how trapped ions are used for QC and their strengths and limitations as qubits.  In addition, we discuss what is being done, and what may be required, to increase the scale of trapped ion quantum computers while mitigating decoherence and control errors.  Finally, we explore the outlook for trapped-ion QC.  In particular, we discuss near-term applications, considerations impacting the design of future systems of trapped ions, and experiments and demonstrations that may further inform these considerations.
@@ -377,7 +374,7 @@ For hyperfine qubits, laser-based gates can be implemented using stimulated Rama
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\columnwidth]{RamanTransitionv2.pdf}
+    \includegraphics[scale=0.8]{RamanTransitionv2.pdf}
     \caption{Schematic of level structure used in a stimulated Raman transition. The $\zero$ and $\one$ states are coupled by two lasers separated in frequency by the qubit splitting $\delta$. For sufficiently large Rabi frequencies $\Omega_{1,2}$ and Raman detuning $\Delta$, qubit transitions can be efficiently driven with negligible population of the lossy, short-lived state $|e \rangle$.}
     \label{fig:ramangate}
 \end{figure}
@@ -466,7 +463,7 @@ A third type of two-qubit gate for ions is Leibfried's geometric-phase gate~\cit
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.7]{GeometricPhase_final.pdf}
+    \includegraphics[scale=0.5]{GeometricPhase_final.pdf}
     \caption{Phase space trajectories of two-ion states during a  geometric phase  gate. Spin-dependent forces drive particular ion states ($|10\rangle$ and  $|01\rangle$) along closed paths in phase space, imparting a geometric phase $\Phi$ set by the enclosed area. The $|00\rangle$ and $|11\rangle$ states do not couple to the control field and therefore accrue no geometric phase. Figure adapted from Ref. \cite{LeibfriedDidiGate2003}. The M\o{}lmer-S\o{}rensen gate proceeds in a similar fashion but applies phases to two-ion states in a rotated spin basis.}
     \label{fig:phasegates}
 \end{figure}
