--- a/1308.5619/ShutUpAndLetMeThink.tex
+++ b/1308.5619/ShutUpAndLetMeThink.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[12pt]{article}
 
 \usepackage{amstext,amsmath,amssymb,amsthm}  % AMS Math
 %% DEFINITION AND MODIFICATION OF amsthm ENVIRONMENTS
@@ -24,14 +24,48 @@
 \usepackage[comma,sort,authoryear]{natbib}
 \usepackage{hypernat}  % For natbib to interact with hyperref
 
-\usepackage{vmargin}  % Defaults margins to sensible values on A4 paper
-% And some more tweaking because nobody uses paper-made books anymore
-\addtolength{\hoffset}{-0.5cm}
-\addtolength{\oddsidemargin}{-0.5cm}
-\addtolength{\evensidemargin}{-0.5cm}
-\addtolength{\voffset}{-1cm}
-\addtolength{\textwidth}{1.5cm}
-\addtolength{\textheight}{1cm}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \usepackage{authblk}
 \renewcommand\Affilfont{\itshape\footnotesize}
@@ -46,17 +80,6 @@
 \definecolor{dark-red}{rgb}{0.8,0.15,0.15}
 \definecolor{dark-blue}{rgb}{0.15,0.15,0.6}
 \definecolor{medium-blue}{rgb}{0,0,0.8}
-
-% hyperref must be placed last
-\usepackage[pdftex,breaklinks,colorlinks]{hyperref}
-\hypersetup{  % hyperref configuration, metadata
-  pdftitle =
-    {Shut up and let me think! Or why you should work on the foundations of quantum mechanics as much as you please},
-  linkcolor={dark-red},
-  citecolor={dark-blue},
-  urlcolor={medium-blue}
-}
-
 
 %\bibliographystyle{my-unsrt-anno}
 %\bibliographystyle{my-plainnat}
@@ -86,12 +109,14 @@
 \affil[5]{Unidad Asociada IQFR-BIFI, Madrid-Zaragoza, Spain}
 
 
-\date{\today}
+\date{29 Sep 2013}
 
 \maketitle
 
+\thispagestyle{empty}
 
 % With an abstract
+\newpage
 \begin{abstract}
 
 If you have a restless intellect, it is very likely that you have played at
@@ -129,6 +154,7 @@ standard answer to it: ``Shut up and let me think!''
 \end{abstract}
 
 
+\newpage
 
 \section{On a personal note}
 \label{sec:personal}
