--- a/2209.06930/aarsolvay.tex
+++ b/2209.06930/aarsolvay.tex
@@ -1,8 +1,53 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{fullpage}
 \usepackage{graphicx}
 \usepackage{amsmath}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 \title{How Much Structure Is Needed for Huge Quantum Speedups?}
 \author{Scott Aaronson\thanks{University of Texas at Austin. \ Email:
@@ -38,6 +83,8 @@ to be concentrated on the unknown right answer(s).
 Edited transcript of a rapporteur talk delivered at the $28^{th}$ Solvay Physics Conference in Brussels, Belgium on May 21, 2022.
 \end{abstract}
 
+\newpage
+
 \section{Introduction}
 
 I can't think of any better way to celebrate my $41^{st}$ birthday than to kick off the Solvay discussion of quantum algorithms! \ This talk \emph{will} include the birthday paradox, by the way.
@@ -46,8 +93,8 @@ How much structure does a problem have to have before the problem admits, let's 
 
 It's a difficult question. \ It's so difficult that I posed it to an AI artist, DALL-E2, getting back the striking images shown in Figure \ref{dalle}. \ There \emph{might} be some insight in them, I'm not sure.
 
-\begin{figure}
-\includegraphics[width=6.5in]{dalle.jpg}
+\begin{figure}[bt]
+\includegraphics[width=5.8in]{dalle.jpg}
 \caption{``How Much Structure Is Needed for Huge Quantum Speedups?,'' according to DALL-E2}
 \label{dalle}
 \end{figure}
@@ -59,7 +106,7 @@ Alas, we've understood for 30 years that the reality of quantum algorithms is su
 So, where does quantum computing fit in to the landscape of computational complexity theory? \ John Preskill already sketched the picture in his beautiful opening talk for this conference \cite{preskill:solvay}, but Figure \ref{classes} shows what it looks like when drawn.
 
 \begin{figure}
-\includegraphics[width=6.5in]{classes.jpg}
+\includegraphics[width=5.5in]{classes.jpg}
 \caption{Complexity classes relevant to this talk.}
 \label{classes}
 \end{figure}
@@ -97,7 +144,7 @@ But that brings me to our second kind of knowledge about quantum speedups. \ A l
 
 \begin{figure}
 \centering
-\includegraphics[width=4in]{query.jpg}
+\includegraphics[width=3in]{query.jpg}
 \caption{The unitary transformation $U_f$ that corresponds to querying a function $f$.}
 \label{query}
 \end{figure}
@@ -167,7 +214,7 @@ BosonSampling (in a variation called Gaussian BosonSampling) was experimentally 
 A second example this sort of experiment is Random Circuit Sampling. \ This is what was used in the \emph{first} demonstration of quantum supremacy, by the group at Google in 2019 \cite{arute} (see Figure \ref{google}). \ The Google group said, let's take something like BosonSampling, but modified so that it naturally runs on a superconducting qubit system like ours. \ So, they had $n=53$ qubits in a $2$-dimensional lattice on a chip, called Sycamore, which was placed in a dilution refrigerator and cooled to about 10 milliKelvin (see Figure \ref{google}).
 
 \begin{figure}
-\includegraphics[width=6.5in]{google.jpg}
+\includegraphics[width=5.7in]{google.jpg}
 \caption{Google's $53$-qubit Sycamore chip; the dilution refrigerator in which the chip is placed; a staggered pattern of nearest-neighbor gates applied to the qubits in such a chip.}
 \label{google}
 \end{figure}
@@ -219,7 +266,7 @@ We do know some other very intriguing exponential quantum speedups in the black-
 
 \begin{figure}
 \centering
-\includegraphics[width=4in]{gluedtrees.jpg}
+\includegraphics[width=3in]{gluedtrees.jpg}
 \caption{The glued-trees graph, consisting of two complete binary trees connected at the leaves by a random cycle.}
 \label{gluedtrees}
 \end{figure}
